redesign the card component; complete the logic of favoriteMovie service

--- a/src/app/components/card/card.component.css
+++ b/src/app/components/card/card.component.css
@@ -30,8 +30,20 @@
   object-fit: cover; 
 }
 .card-header{
-  height: 35px;
+  height: 65px;
 }
 .card-title{
   color:black;
+}
+mat-card {
+  height: 560px; 
+  width: 320px; 
+  overflow: auto;
+}
+
+.card-spacer {
+  flex: 1 1 auto;
+}
+.card-rating{
+  /* color: red; */
 }
