--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -21,7 +21,7 @@
     </mat-card>
     
     <mat-card class="example-card" *ngSwitchCase="'detial'">
-        <mat-card-header class="card-header">
+        <mat-card-header class="card-header-detial">
             <mat-card-subtitle class="card-title">{{data.Title}}({{data.Year}})</mat-card-subtitle>
         </mat-card-header>
         <mat-card-header>
