--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,7 +1,10 @@
-/* .header-root{
-    position: relative;
-    width: 100%;
-} */
+.mat-toolbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 9999; 
+}
 .header-spacer {
     flex: 1 1 auto;
 }
@@ -20,3 +23,8 @@
     /* width: 100%; */
     margin-bottom: -2.5em;
 }
+  
+.header-filler {
+    height: 64px;
+}
+  
