--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -45,6 +45,9 @@
 
     <span class="header-spacer"></span>
 
+    <button mat-icon-button [routerLink]="'/'">
+        <mat-icon>home</mat-icon>
+    </button>
     <button mat-icon-button [routerLink]="'/favorite'">
         <mat-icon matBadge={{count}} matBadgeColor="warn">favorite</mat-icon>
     </button>
@@ -52,3 +55,4 @@
         <mat-icon>share</mat-icon>
     </button> -->
 </mat-toolbar>
+<div class="header-filler"><div>
